# apache_flink-kickstarter-ii

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  KNOWN_ISSUES.md  Makefile  README.md
cp_java_examples/ptf_udf/: README.md  pom.xml  settings.gradle.kts
docs/: apache_flink-cheatsheet.md  apache_flink_api_layers.html  ccaf-listview-mapview-ptf-udf-limitation-explanation.md  ccaf-map-list-ptf-udf-limitation-explanation.md  ccaf-performance_specs-high_throughput_workloads.md  ccaf-reference-guide.md  flink-sql-lateral-view-vs-ptf.md  manual_deployment.md  minikube-deployment.md  ptf-udf-python-support.md  ptf-udf-uid-benefits-in-flinksql.md  remote-debugging-flink-udf.md  remote-server-ssh-tunneling.md  running-make.md
examples/ptf_udf/cc_deploy/: README.md  data.tf  setup-confluent-environment.tf
examples/ptf_udf/cc_java/: README.md  settings.gradle.kts
examples/ptf_udf/cc_terraform/: .terraform.lock.hcl  data.tf  main.tf  setup-confluent-flink.tf  setup-confluent-kafka.tf  setup-confluent-schema_registry.tf
examples/ptf_udf/cp_deploy/: README.md
examples/ptf_udf/cp_java/: README.md
examples/ptf_udf/java/: README.md  remote-debugging-flink-ptf_udf.md
examples/ptf_udf/python/: README.md
examples/ptf_udf_row_driven/cc_deploy/: README.md  data.tf  main.tf  setup-confluent-environment.tf  setup-confluent-flink.tf  setup-confluent-kafka.tf  variables.tf
examples/ptf_udf_row_driven/cp_deploy/: README.md
examples/ptf_udf_row_driven/java/: README.md  remote-debugging-flink-ptf_udf_row_driven.md  settings.gradle.kts
examples/ptf_udf_row_driven/python/: README.md
examples/ptf_udf_state_driven/cc_deploy/: README.md
examples/ptf_udf_state_driven/cp_deploy/: README.md
examples/ptf_udf_state_driven/java/: remote-debugging-flink-ptf_udf.md  remote-debugging-flink-ptf_udf_state_driven.md
examples/ptf_udf_state_driven/python/: README.md
examples/ptf_udf_time_driven/cc_deploy/: README.md  data.tf  main.tf  providers.tf  setup-confluent-environment.tf  setup-confluent-flink.tf  setup-confluent-kafka.tf  variables.tf
examples/ptf_udf_time_driven/cp_deploy/: README.md
examples/ptf_udf_time_driven/java/: README.md  remote-debugging-flink-ptf_udf_time_driven.md
examples/ptf_udf_time_driven/python/: README.md
examples/ptf_udf_timer_driven/cc_deploy/: README.md  data.tf  main.tf  setup-confluent-environment.tf  setup-confluent-flink.tf  setup-confluent-kafka.tf
examples/ptf_udf_timer_driven/cp_deploy/: README.md
examples/ptf_udf_timer_driven/java/: README.md  remote-debugging-flink-ptf_udf_timer_driven.md  settings.gradle.kts
examples/ptf_udf_timer_driven/python/: README.md
examples/scalar_udf/cc_deploy/: README.md  data.tf  main.tf  setup-confluent-environment.tf  setup-confluent-flink.tf  setup-confluent-kafka.tf  variables.tf
examples/scalar_udf/cp_deploy/: README.md
examples/scalar_udf/java/: README.md  remote-debugging-flink-scalar_udf.md  settings.gradle.kts
examples/scalar_udf/python/: .gitignore  README.md  fahrenheit_to_celsius.py  pseudonymize_pii.py  pyproject.toml  resolve_identity.py  tokenize_pan.py
examples/scalar_udf/python/src/: celsius_to_fahrenheit.py  consistent_bucket.py  mask_pii_regex.py  run_job.py  tokenize_pan.py
examples/scalar_udf/python/src/scalar_udf/: dedup_key.py  pseudonymize_pii.py  secrets_resolver.py  tokenize_pan.py
examples/scalar_udf/python_cc/: .gitignore  README.md  pyproject.toml
k8s/base/: flink-basic-deployment.yaml
k8s/base/localstack/: deployment.yaml  namespace.yaml  seed-job.yaml  service.yaml
k8s/images/cp-flink-python/: Dockerfile
scripts/: deploy-cc-java-ptf-udf.sh  deploy-cc-ptf-udf-row-driven.sh  deploy-cc-ptf-udf-state-driven.sh  deploy-cc-ptf-udf-time-driven.sh  deploy-cc-ptf-udf-timer-driven.sh  deploy-cc-ptf-udf.sh  deploy-cc-scalar-udf.sh  deploy-cp-ptf-udf-row-driven.sh  deploy-cp-ptf-udf-state-driven.sh  deploy-cp-ptf-udf-time-driven.sh  deploy-cp-ptf-udf-timer-driven.sh  deploy-cp-ptf-udf.sh  deploy-cp-scalar-udf-python.sh  deploy-cp-scalar-udf.sh
(+36 files in other folders)
