[project]
name = "scalar-udf-python"
version = "0.20.00.000"
description = "PyFlink scalar UDF examples"
requires-python = ">=3.11,<3.12"
dependencies = [
    "apache-flink==2.1.1",

    # Microsoft Presidio for the mask_pii_regex UDF. presidio-analyzer ships
    # the predefined regex recognizers (Email, IP, UsSsn, CreditCard) we reuse
    # verbatim; presidio-anonymizer applies the replace operator. spaCy is
    # NOT pulled in at runtime — we instantiate each recognizer directly and
    # never construct an AnalyzerEngine, so the NLP engine stack is skipped.
    # Pinned to the exact PyPI releases the sibling Java UDF's regex patterns
    # were ported from. Bumping these requires re-running the cross-language
    # parity test to catch any pattern-set changes.
    "presidio-analyzer==2.2.359",
    "presidio-anonymizer==2.2.362",
    
    # boto3 is used by pseudonymize_pii and tokenize_pan when their
    # *_SECRET_ID env vars point at AWS Secrets Manager (or LocalStack via
    # AWS_ENDPOINT_URL_SECRETSMANAGER). Unused if only the env-var fallback is set.
    "boto3>=1.36,<2",
]

# apache-beam (a transitive dep of apache-flink) ships a legacy setup.py that
# imports pkg_resources without declaring it as a build dependency. Modern
# setuptools (>=80) removed pkg_resources as a top-level namespace, so pin
# the build-time setuptools to a version that still ships it.
[tool.uv.extra-build-dependencies]
apache-beam = [{ requirement = "setuptools<80" }]
