[project]
name = "scalar-udf-cc"
version = "0.1.0"
description = "PyFlink Scalar UDFs packaged for Confluent Cloud (Early Access)"
# Confluent Cloud's Python UDF runtime supports Python 3.10–3.11.
requires-python = ">=3.11,<3.12"
# Confluent Cloud currently supports exactly apache-flink==2.0.0 — do not bump
# without first checking the CC Python UDF release notes.
dependencies = [
    "apache-flink==2.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# The `scalar_udf` package is copied in from ../python/src/scalar_udf/ by the
# `build-scalar-udf-cc-python` Makefile target right before `uv build --sdist`
# runs — python_cc/ deliberately has no committed src/ tree, so the CP and CC
# paths cannot drift out of sync.
[tool.setuptools.packages.find]
where = ["src"]
include = ["scalar_udf*"]

# Constraint deps recommended by Confluent's flink-udf-python-examples repo to
# keep the sdist resolvable against the CC Python worker runtime.
[tool.uv]
constraint-dependencies = [
    "apache-flink==2.0.0",
    "click>=8.2.0",
    "confluent-function-runtime-core>=0.181.0",
    "grpc-interceptor>=0.15.0",
    "grpcio-health-checking>=1.65.0",
    "grpcio-reflection>=1.65.0",
    "grpcio>=1.65.0",
    "protobuf>=5.29.1",
    "psutil>=5.9.0",
    "pyparsing>=3.2.5",
    "typing_extensions>=4.4.0",
]

# apache-beam (a transitive dep of apache-flink) ships a legacy setup.py that
# imports pkg_resources without declaring it as a build dependency. Modern
# setuptools (>=80) removed pkg_resources as a top-level namespace, so pin
# the build-time setuptools to a version that still ships it.
[tool.uv.extra-build-dependencies]
apache-beam = ["setuptools<80"]
